--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>React Starter</title>
+  <link rel="shortcut icon" href="#" />
 </head>
 
 <body>
   <div id="root"></div>
+  <div id="rootStateLess"></div>
+
+  <div id="rootStyle"></div>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
